# finite-automaton

./: README.md  automaton.opam  dune-project
examples/: coffee.txt  evenA.txt
exemples/: coffe.txt  coffee.txt  evenA.txt
lib/: automaton.ml  automaton.mli  dune  graphvizExport.ml  graphvizExport.mli  lexer.ml  lexer.mli
